name:                generate
version:             0.1.0.0
synopsis:            A program to generate the spir-v package from the html specification
description:         Please see README.md
homepage:            http://github.com/expipiplus1/spir-v#readme
license:             MIT
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          generator.I.ardly.know.er@monoid.al
copyright:           2015 Joe Hermaszewski
category:            Language
build-type:          Simple
extra-source-files:
  README.md
cabal-version:       >=1.10

executable generate
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Check
    Control.Arrow.ArrowList.Extra
    ConvertHTML
    Data.Maybe.Extra
    Output
    Parse
    Regex
    Spec
    Table
    Write
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:
    base >= 4.7 && < 5,
    array >= 0.5 && < 0.6,
    attoparsec >= 0.12 && < 0.14,
    directory >= 1.2 && < 1.3,
    filepath >= 1.4 && < 1.5,
    hxt >= 9.3 && < 9.4,
    interpolatedstring-perl6 >= 1.0 && < 1.2,
    pandoc >= 1.15 && < 2.2,
    pandoc-types >= 1.12 && < 1.18,
    regex-tdfa >= 1.2 && < 1.3,
    safe >= 0.3 && < 0.4,
    text >= 1.2 && < 1.3,
    wl-pprint-text >= 1.1 && < 1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/spir-v
